syntax = "proto3";
package accounts;
option go_package = "./proto";


service AccountService {
    rpc CreateAccount (CreateAccountRequest) returns (AccountResponse);
    rpc GetAccount (GetAccountRequest) returns (AccountResponse);
    rpc UpdateBalance (UpdateBalanceRequest) returns (AccountResponse);
    rpc ListAccounts (ListAccountsRequest) returns (ListAccountsResponse);
    // rpc ReserveFunds(ReserveRequest) returns (ReserveResponse);
    // rpc Transfer(TransferRequest) returns (TransferResponse);
}

message CreateAccountRequest {
    string name = 1;
    string account_no = 2;
    double initial_balance = 3;
}

message GetAccountRequest {
    string account_id = 1;
}

message UpdateBalanceRequest {
    string account_id = 1;
    double amount = 2;
    bool is_credit = 3;
}

message AccountResponse {
    string account_id = 1;
    string name = 2;
    string account_no = 3;
    double balance = 4;
	double reserved = 5;
}

message ListAccountsRequest {}

message ListAccountsResponse {
    repeated AccountResponse accounts = 1;
}

// message ReserveRequest {
//   string account_id = 1;
//   double amount = 2;
//   string reference_id = 3;
// }

// message ReserveResponse {
//   string status = 1;
//   string message = 2;
// }

// message TransferRequest {
//   string reference_id = 1;
// }

// message TransferResponse {
//   string status = 1;
//   string message = 2;
// }